<resources>
    <string name="app_name">pangeea</string>

    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="generate_ai">OR: <font color='#1F78FF'>GENERATE AI</font></string>
    <string name="add_an_hour">ADD AN HOUR</string>
    <string name="add_some_ndetails">Add some \ndetails</string>
    <string name="select_a_date_nand_time">SELECT A DATE \nAND TIME</string>
    <string name="add">ADD</string>
    <string name="add_a_title">Add a title</string>
    <string name="add_some_details">Add some details</string>
    <string name="support_lessons">Support\nlessons</string>
    <string name="go">GO</string>
    <string name="add_a_mark">Add a mark</string>
    <string name="select">Select</string>
    <string name="then_nenter_your_mark">Then: \nEnter your mark</string>
    <string name="add_a_test">ADD A TEST</string>
    <string name="select_a_date">SELECT A DATE</string>
    <string name="name">Name</string>
    <string name="add_q">ADD_Q</string>
    <string name="add_l">ADD_L</string>
    <string name="ai">No time?Let AI help you</string>
    <string name="add_test_nquestion">ADD TEST \nQUESTION</string>
    <string name="prompt">Prompt</string>
    <string name="type">Type:</string>
    <string name="got_questions">Got questions?</string>
    <string name="enter">Enter</string>
    <string name="accept">ACCEPT</string>
    <string name="redo">REDO</string>
    <string name="raise_hand">raise hand</string>
    <string name="or_create_acc">or create acc</string>
    <string name="welcome_back">WELCOME\nBACK</string>
    <string name="to_do">TO DO LIST:</string>
    <string name="upcoming_hours">UPCOMING HOURS:</string>
    <string name="upcoming_tests">UPCOMING TESTS:</string>
    <string name="add_a_description">Add a description</string>
    <string name="awaiting">Awaiting</string>
    <string name="member_list">Member list</string>
    <string name="presence">Presence</string>
    <string name="raised_hands">Raised hands</string>
    <string name="you_can_do_better">YOU CAN DO BETTER</string>
    <string name="here_is_a_list_of_lessons_carefully_picked_for_you_to_improve_your_performance">HERE IS A LIST OF LESSONS CAREFULLY PICKED FOR YOU TO IMPROVE YOUR PERFORMANCE</string>
    <string name="not_enough_let_us_help_you_then">Not enough?Let ai help you then</string>
    <string name="don_t_have_an_account_create">Don\'t have an account? Create</string>
    <string name="sign_in_your_account">Sign in your account</string>
    <string name="i_am_a_station">I am a station</string>
    <string name="absences">Absences</string>
    <string name="marks">Marks</string>
    <string name="place_your_nphone_on_the_ndock">PLACE YOUR\nPHONE ON THE\nDOCK</string>
    <string name="upload_question">UPLOAD QUESTION</string>
    <string name="upload_files">UPLOAD FILES</string>
    <string name="upcoming">UPCOMING HOURS AND TESTS:</string>
    <string name="submissions">Submissions</string>
    <string name="need_help_n_see_what_others_did">Need help?\nSee what others did</string>
    <string name="or_generate_a_lesson">OR: <font color="#1F78FF">GENERATE AI</font></string>
    <string name="what_did_you_do_wrong">What did you do wrong?</string>
    <string name="theans">raspunsul</string>
    <string name="answe">raspuns</string>
    <string name="is">is</string>
    <string name="scientifically_accurate">a scientifically accurat answer to the question</string>
    <string name="wrong_sci">a scientifically innacurate answer to the question</string>
    <string name="AI_QUESTION">A short question related to the lesson \'</string>
    <string name="generate_l">"Generate a 300 word lesson related to "</string>
    <string name="generate_r">Generate a 100 word answer to the question</string>
    <string name="lessondod">Lesson:</string>
    <string name="answerdod">Answer:</string>
    <string name="generate_a_les">Generate a lesson with the title</string>
    <string name="i_will_answer">I will answer</string>
    <string name="ai_will_answer">AI will answer</string>
    <string name="ras">Answer</string>
    <string name="answertode" translatable="false">\"Raspunsul la intrebarea \"</string>
    <string name="iz" translatable="false">\" este:\"</string>
    <string name="add2" translatable="false">ADD</string>
    <string name="a_prompt" translatable="false">A:</string>
    <string name="b_prompt" translatable="false">B:</string>
    <string name="c_prompt" translatable="false">C:</string>
    <string name="FirebaseURL" translatable="false">https://pangeea-835fb-default-rtdb.europe-west1.firebasedatabase.app</string>
    <string name="openailink" translatable="false">https://api.openai.com/v1/completions</string>
    <string name="openaikey" translatable="false">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</string>
    <string name="mark">\"Mark \"</string>
    <string name="first_test_mark">\"First test mark \"</string>
    <string name="not_yet_held">Improvement test mark : not yet held</string>
    <string name="improvement_test_mark">\"Improvement test mark \"</string>
    <string name="congrats">Congratiulations</string>
    <string name="received_mark">You received a mark,would you like to claim it?</string>
    <string name="ye">Yes</string>
    <string name="no">No</string>
    <string name="you_may_speak">You may speak</string>
    <string name="hows_goin">How is it going?</string>
    <string name="rasp">\"Is \"</string>
    <string name="answering_good">\" answering good?\"</string>
    <string name="good">Good</string>
    <string name="bad">Bad</string>
    <string name="ora">\"hour \"</string>
    <string name="active">active now</string>
    <string name="has_a_q">\" has a question\"</string>
    <string name="how_will_ans">How will you answer?</string>
    <string name="hours">\" hours\"</string>
    <string name="starts_in">\" starts in \"</string>
    <string name="invalid_mark">Invalid mark or date</string>
    <string name="no_title">you didn\'t enter a title</string>
    <string name="no_time">you didn\'t pick a time</string>
    <string name="make_public">Make public</string>
    <string name="want_to_be_public">Do you want the lesson to be public?</string>
    <string name="invalid_file">Invalid file</string>
    <string name="class_name">\"Class name : \"</string>
    <string name="addh">ADD AN HOUR</string>
    <string name="addt">ADD A TASK</string>
    <string name="no_q">You didnt add any questions</string>
    <string name="a_was_true">Question was</string>
    <string name="a_was">A was</string>
    <string name="a_was_true_">A was true</string>
    <string name="why_is_true">Why is this answer true</string>
    <string name="for_q">for the question</string>
    <string name="a_was_wrong">A was wrong</string>
    <string name="q_was">Question was</string>
    <string name="why_is_wrong">Why is this answer wrong</string>
    <string name="b_was_true">B was true</string>
    <string name="b_was">B was</string>
    <string name="b_was_wrong">B was wrong</string>
    <string name="c_was_true">C was true</string>
    <string name="c_was">C was</string>
    <string name="c_was_wrong">C was wrong</string>
    <string name="you_got">\"You got a \"</string>
    <string name="want_to_delete">Do you want to delete the keyword?</string>
    <string name="question_related">\"A question related to the lesson\"</string>


</resources>