<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".hour.Hour_info_elev">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="PROGRAMMING"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/poppins_extrabold"
        android:textColor="@color/black"

        app:layout_constraintBottom_toTopOf="@+id/guideline121"
        app:layout_constraintEnd_toStartOf="@+id/guideline123"
        app:layout_constraintStart_toStartOf="@+id/guideline119"
        app:layout_constraintTop_toTopOf="@+id/guideline122" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/guideline104"
        app:layout_constraintEnd_toEndOf="@+id/guideline120"
        app:layout_constraintStart_toStartOf="@+id/guideline119"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:autoSizeTextType="uniform"
            android:fontFamily="@font/poppins_extrabold"
            android:text="Lessons"
            android:textColor="#605CFF"
            app:layout_constraintBottom_toBottomOf="@+id/guideline222"
            app:layout_constraintEnd_toEndOf="@+id/guideline228"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline229" />

        <ListView
            android:id="@+id/lv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/guideline224"
            app:layout_constraintEnd_toEndOf="@id/guideline227"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline226"
            app:layout_constraintTop_toTopOf="@id/guideline222">


        </ListView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline222"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.16" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline224"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.92" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline226"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.07" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline227"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.92" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline228"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.28" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline229"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.07" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.31" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/raise_hand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:backgroundTint="#5C7BE9"
        android:text="@string/raise_hand"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline123"
        app:layout_constraintStart_toStartOf="@+id/guideline118"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/ai_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/generate_ai"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline120"
        app:layout_constraintStart_toStartOf="@+id/guideline123"
        app:layout_constraintTop_toTopOf="@+id/guideline104" />

    <TextView
        android:id="@+id/lesson_net_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/poppins_extrabold"
        android:text="@string/need_help_n_see_what_others_did"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline118"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="@+id/guideline119"
        app:layout_constraintTop_toTopOf="@+id/guideline104"
        app:layout_constraintVertical_bias="0.505" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline104"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.83994526" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline116"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline117"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline118"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline119"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03163017"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline120"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.97" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline121"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.11764706" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline122"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.036935706" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline123"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/active_inactive"
        app:cornerRadius="20dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="Button"
        android:backgroundTint="#67DC54"
        app:layout_constraintBottom_toTopOf="@+id/guideline124"
        app:layout_constraintEnd_toStartOf="@+id/guideline118"
        app:layout_constraintStart_toStartOf="@+id/guideline119"
        app:layout_constraintTop_toTopOf="@+id/guideline121" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline124"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.17" />

</androidx.constraintlayout.widget.ConstraintLayout>